--- a/webscrape1.ipynb
+++ b/webscrape1.ipynb
@@ -3630,6 +3630,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Senior Python Developer',\n",
+       " 'Energy engineer',\n",
+       " 'Legal executive',\n",
+       " 'Fitness centre manager',\n",
+       " 'Product manager',\n",
+       " 'Medical technical officer',\n",
+       " 'Physiological scientist',\n",
+       " 'Textile designer',\n",
+       " 'Television floor manager',\n",
+       " 'Waste management officer',\n",
+       " 'Software Engineer (Python)',\n",
+       " 'Interpreter',\n",
+       " 'Architect',\n",
+       " 'Meteorologist',\n",
+       " 'Audiological scientist',\n",
+       " 'English as a second language teacher',\n",
+       " 'Surgeon',\n",
+       " 'Equities trader',\n",
+       " 'Newspaper journalist',\n",
+       " 'Materials engineer',\n",
+       " 'Python Programmer (Entry-Level)',\n",
+       " 'Product/process development scientist',\n",
+       " 'Scientist, research (maths)',\n",
+       " 'Ecologist',\n",
+       " 'Materials engineer',\n",
+       " 'Historic buildings inspector/conservation officer',\n",
+       " 'Data scientist',\n",
+       " 'Psychiatrist',\n",
+       " 'Structural engineer',\n",
+       " 'Immigration officer',\n",
+       " 'Python Programmer (Entry-Level)',\n",
+       " 'Neurosurgeon',\n",
+       " 'Broadcast engineer',\n",
+       " 'Make',\n",
+       " 'Nurse, adult',\n",
+       " 'Air broker',\n",
+       " 'Editor, film/video',\n",
+       " 'Production assistant, radio',\n",
+       " 'Engineer, communications',\n",
+       " 'Sales executive',\n",
+       " 'Software Developer (Python)',\n",
+       " 'Futures trader',\n",
+       " 'Tour manager',\n",
+       " 'Cytogeneticist',\n",
+       " 'Designer, multimedia',\n",
+       " 'Trade union research officer',\n",
+       " 'Chemist, analytical',\n",
+       " 'Programmer, multimedia',\n",
+       " 'Engineer, broadcasting (operations)',\n",
+       " 'Teacher, primary school',\n",
+       " 'Python Developer',\n",
+       " 'Manufacturing systems engineer',\n",
+       " 'Producer, television/film/video',\n",
+       " 'Scientist, forensic',\n",
+       " 'Bonds trader',\n",
+       " 'Editorial assistant',\n",
+       " 'Photographer',\n",
+       " 'Retail banker',\n",
+       " 'Jewellery designer',\n",
+       " 'Ophthalmologist',\n",
+       " 'Back-End Web Developer (Python, Django)',\n",
+       " 'Licensed conveyancer',\n",
+       " 'Futures trader',\n",
+       " 'Counselling psychologist',\n",
+       " 'Insurance underwriter',\n",
+       " 'Engineer, automotive',\n",
+       " 'Producer, radio',\n",
+       " 'Dispensing optician',\n",
+       " 'Designer, fashion/clothing',\n",
+       " 'Chartered loss adjuster',\n",
+       " 'Back-End Web Developer (Python, Django)',\n",
+       " 'Forest/woodland manager',\n",
+       " 'Clinical cytogeneticist',\n",
+       " 'Print production planner',\n",
+       " 'Systems developer',\n",
+       " 'Graphic designer',\n",
+       " 'Writer',\n",
+       " 'Field seismologist',\n",
+       " 'Chief Strategy Officer',\n",
+       " 'Air cabin crew',\n",
+       " 'Python Programmer (Entry-Level)',\n",
+       " 'Warden/ranger',\n",
+       " 'Sports therapist',\n",
+       " 'Arts development officer',\n",
+       " 'Printmaker',\n",
+       " 'Health and safety adviser',\n",
+       " 'Manufacturing systems engineer',\n",
+       " 'Programmer, applications',\n",
+       " 'Medical physicist',\n",
+       " 'Media planner',\n",
+       " 'Software Developer (Python)',\n",
+       " 'Surveyor, land/geomatics',\n",
+       " 'Legal executive',\n",
+       " 'Librarian, academic',\n",
+       " 'Barrister',\n",
+       " 'Museum/gallery exhibitions officer',\n",
+       " 'Radiographer, diagnostic',\n",
+       " 'Database administrator',\n",
+       " 'Furniture designer',\n",
+       " 'Ship broker']"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "job_titles = [jobs.text for jobs in soup.findAll('h2')]\n",
+    "job_titles"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
