--- a/webscrape1.ipynb
+++ b/webscrape1.ipynb
@@ -3750,6 +3750,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://realpython.github.io/fake-jobs/jobs/senior-python-developer-1.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/energy-engineer-2.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/legal-executive-3.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/fitness-centre-manager-4.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/product-manager-5.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/medical-technical-officer-6.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/physiological-scientist-7.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/textile-designer-8.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/television-floor-manager-9.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/waste-management-officer-10.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/software-engineer-python-11.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/interpreter-12.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/architect-13.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/meteorologist-14.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/audiological-scientist-15.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/english-as-a-second-language-teacher-16.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/surgeon-17.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/equities-trader-18.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/newspaper-journalist-19.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/materials-engineer-20.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/python-programmer-entry-level-21.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/product/process-development-scientist-22.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/scientist-research-maths-23.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/ecologist-24.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/materials-engineer-25.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/historic-buildings-inspector/conservation-officer-26.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/data-scientist-27.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/psychiatrist-28.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/structural-engineer-29.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/immigration-officer-30.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/python-programmer-entry-level-31.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/neurosurgeon-32.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/broadcast-engineer-33.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/make-34.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/nurse-adult-35.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/air-broker-36.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/editor-film/video-37.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/production-assistant-radio-38.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/engineer-communications-39.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/sales-executive-40.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/software-developer-python-41.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/futures-trader-42.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/tour-manager-43.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/cytogeneticist-44.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/designer-multimedia-45.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/trade-union-research-officer-46.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/chemist-analytical-47.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/programmer-multimedia-48.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/engineer-broadcasting-operations-49.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/teacher-primary-school-50.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/python-developer-51.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/manufacturing-systems-engineer-52.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/producer-television/film/video-53.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/scientist-forensic-54.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/bonds-trader-55.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/editorial-assistant-56.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/photographer-57.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/retail-banker-58.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/jewellery-designer-59.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/ophthalmologist-60.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/back-end-web-developer-python-django-61.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/licensed-conveyancer-62.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/futures-trader-63.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/counselling-psychologist-64.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/insurance-underwriter-65.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/engineer-automotive-66.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/producer-radio-67.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/dispensing-optician-68.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/designer-fashion/clothing-69.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/chartered-loss-adjuster-70.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/back-end-web-developer-python-django-71.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/forest/woodland-manager-72.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/clinical-cytogeneticist-73.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/print-production-planner-74.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/systems-developer-75.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/graphic-designer-76.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/writer-77.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/field-seismologist-78.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/chief-strategy-officer-79.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/air-cabin-crew-80.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/python-programmer-entry-level-81.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/warden/ranger-82.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/sports-therapist-83.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/arts-development-officer-84.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/printmaker-85.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/health-and-safety-adviser-86.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/manufacturing-systems-engineer-87.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/programmer-applications-88.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/medical-physicist-89.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/media-planner-90.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/software-developer-python-91.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/surveyor-land/geomatics-92.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/legal-executive-93.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/librarian-academic-94.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/barrister-95.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/museum/gallery-exhibitions-officer-96.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/radiographer-diagnostic-97.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/database-administrator-98.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/furniture-designer-99.html\n",
+      "https://realpython.github.io/fake-jobs/jobs/ship-broker-100.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "for job, title in enumerate(job_titles):\n",
+    "    title = title.lower().replace(' ','-').replace('(','').replace(')','').replace(',','')\n",
+    "    url = f'https://realpython.github.io/fake-jobs/jobs/{title}-{job+1}.html'\n",
+    "    print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
