--- a/webscrape1.ipynb
+++ b/webscrape1.ipynb
@@ -3868,6 +3868,98 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we want to get the job description text for each job.  \n",
+    "    a. Start by looking at the page for the first job, https://realpython.github.io/fake-jobs/jobs/senior-python-developer-0.html. Using BeautifulSoup, extract the job description paragraph. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://realpython.github.io/fake-jobs/jobs/senior-python-developer-0.html'\n",
+    "\n",
+    "response = requests.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<!DOCTYPE html>\\n<html>\\n  <head>\\n    <meta charset=\"utf-8\">\\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\\n    <title>Fake Python</title>\\n    <link rel=\"stylesheet\" href=\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\">\\n  </head>\\n  <body>\\n  <section class=\"section\">\\n    <div class=\"container mb-5\">\\n      <h1 class=\"title is-1\">\\n        Fake Python\\n      </h1>\\n      <p class=\"subtitle is-3\">\\n        Fake Jobs for Your Web Scraping Journey\\n      </p>\\n    </div>\\n    <div class=\"container\">\\n    <div id=\"ResultsContainer\" class=\"columns is-multiline\">\\n    <div class=\"box\">\\n<h1 class=\"title is-2\">Senior Python Developer</h1>\\n<h2 class=\"subtitle is-4 company\">Payne, Roberts and Davis</h2>\\n<div class=\"content\">\\n    <p>Professional asset web application environmentally friendly detail-oriented asset. Coordinate educational dashboard agile employ growth opportunity. Company programs CSS explore role. Html educational grit web application. Oversea SCRUM talented support. Web Application fast-growing communities inclusive programs job CSS. Css discussions growth opportunity explore open-minded oversee. Css Python environmentally friendly collaborate inclusive role. Django no experience oversee dashboard environmentally friendly willing to learn programs. Programs open-minded programs asset.</p>\\n    <p id=\"location\"><strong>Location:</strong> Stewartbury, AA</p>\\n    <p id=\"date\"><strong>Posted:</strong> 2021-04-08</p>\\n</div>\\n</div>\\n\\n    </div>\\n    </div>\\n  </section>\\n  </body>\\n</html>\\n'"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup2 = BS(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<p class=\"subtitle is-3\">\n",
+       "         Fake Jobs for Your Web Scraping Journey\n",
+       "       </p>,\n",
+       " <p>Professional asset web application environmentally friendly detail-oriented asset. Coordinate educational dashboard agile employ growth opportunity. Company programs CSS explore role. Html educational grit web application. Oversea SCRUM talented support. Web Application fast-growing communities inclusive programs job CSS. Css discussions growth opportunity explore open-minded oversee. Css Python environmentally friendly collaborate inclusive role. Django no experience oversee dashboard environmentally friendly willing to learn programs. Programs open-minded programs asset.</p>,\n",
+       " <p id=\"location\"><strong>Location:</strong> Stewartbury, AA</p>,\n",
+       " <p id=\"date\"><strong>Posted:</strong> 2021-04-08</p>]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup2.findAll('p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Professional asset web application environmentally friendly detail-oriented asset. Coordinate educational dashboard agile employ growth opportunity. Company programs CSS explore role. Html educational grit web application. Oversea SCRUM talented support. Web Application fast-growing communities inclusive programs job CSS. Css discussions growth opportunity explore open-minded oversee. Css Python environmentally friendly collaborate inclusive role. Django no experience oversee dashboard environmentally friendly willing to learn programs. Programs open-minded programs asset.\n"
+     ]
+    }
+   ],
+   "source": [
+    "paragraph = soup2.find('p', class_=None, id=None)\n",
+    "print(paragraph.text)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
