--- a/webscrape1.ipynb
+++ b/webscrape1.ipynb
@@ -3872,7 +3872,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we want to get the job description text for each job.  \n",
+    "3. Finally, we want to get the job description text for each job.  \n",
     "    a. Start by looking at the page for the first job, https://realpython.github.io/fake-jobs/jobs/senior-python-developer-0.html. Using BeautifulSoup, extract the job description paragraph. "
    ]
   },
